# handmatrix-gesture-recognition

./: .gitignore  README.md
HandMatrix/01_Data_Collector/: CMakeLists.txt  main_collector.cpp
HandMatrix/02_Data_Augmenter/: augment_data.py
HandMatrix/03_Model_NN/: CMakeLists.txt  NeuralNet.h  main.cpp
HandMatrix/04_Model_CNN/: CMakeLists.txt  main.cpp  train_cnn.py
